[gd_scene load_steps=10 format=3 uid="uid://cyfwty2q3rdse"]

[ext_resource type="Script" uid="uid://bi0dtjbbi0wxj" path="res://main.gd" id="1_0r6n5"]
[ext_resource type="PackedScene" uid="uid://rkdnhqgf2hpj" path="res://mob.tscn" id="2_50pww"]
[ext_resource type="PackedScene" uid="uid://ct6y47ip73g6p" path="res://egg_box.tscn" id="3_5vw27"]
[ext_resource type="PackedScene" uid="uid://4vwrqjegqwpj" path="res://player.tscn" id="3_veqnc"]
[ext_resource type="PackedScene" uid="uid://ccqoreueuxdb7" path="res://hud.tscn" id="4_0qnje"]
[ext_resource type="AudioStream" uid="uid://gykf7i3avspp" path="res://art/time_for_adventure.mp3" id="5_7mycd"]
[ext_resource type="AudioStream" uid="uid://dw26fpygeag8o" path="res://art/gameover.wav" id="6_hp1r0"]
[ext_resource type="Texture2D" uid="uid://raovn348vd1n" path="res://128x128/Tile/Tile_04-128x128.png" id="7_272bh"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 491.6104, 93.86998, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_0r6n5")
mob_scene = ExtResource("2_50pww")
egg_box_scene = ExtResource("3_5vw27")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("3_veqnc")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_0qnje")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7mycd")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hp1r0")

[node name="Tile04128x128" type="Sprite2D" parent="."]
position = Vector2(48.5, 693)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x129" type="Sprite2D" parent="."]
position = Vector2(177.5, 693)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x130" type="Sprite2D" parent="."]
position = Vector2(306.5, 693)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x131" type="Sprite2D" parent="."]
position = Vector2(435.5, 693)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x132" type="Sprite2D" parent="."]
position = Vector2(48.5, 565)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x133" type="Sprite2D" parent="."]
position = Vector2(177.5, 565)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x134" type="Sprite2D" parent="."]
position = Vector2(306.5, 565)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x135" type="Sprite2D" parent="."]
position = Vector2(435.5, 565)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x136" type="Sprite2D" parent="."]
position = Vector2(47.5, 437)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x137" type="Sprite2D" parent="."]
position = Vector2(176.5, 437)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x138" type="Sprite2D" parent="."]
position = Vector2(305.5, 437)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x139" type="Sprite2D" parent="."]
position = Vector2(434.5, 437)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x140" type="Sprite2D" parent="."]
position = Vector2(47.5, 309)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x141" type="Sprite2D" parent="."]
position = Vector2(176.5, 309)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x142" type="Sprite2D" parent="."]
position = Vector2(305.5, 309)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x143" type="Sprite2D" parent="."]
position = Vector2(434.5, 309)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x144" type="Sprite2D" parent="."]
position = Vector2(47.5, 181)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x145" type="Sprite2D" parent="."]
position = Vector2(176.5, 181)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x146" type="Sprite2D" parent="."]
position = Vector2(305.5, 181)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x147" type="Sprite2D" parent="."]
position = Vector2(434.5, 181)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x148" type="Sprite2D" parent="."]
position = Vector2(47.5, 53)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x149" type="Sprite2D" parent="."]
position = Vector2(176.5, 53)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x150" type="Sprite2D" parent="."]
position = Vector2(305.5, 53)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[node name="Tile04128x151" type="Sprite2D" parent="."]
position = Vector2(434.5, 53)
texture = ExtResource("7_272bh")
metadata/_edit_lock_ = true

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
